--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="root"></div>
     <script
       type="module"
-      src="https://blog-mongo-server.onrender.com/src/main.jsx"
+      src="/src/main.jsx"
     ></script>
   </body>
 </html>
